<resources>
	<string name="app_name">Coin Wallet</string>
	<string name="app_setup_completed">Setup Completed</string>
	<string name="app_sync_completed">Sync Completed</string>
	<string name="available_balance_label">Balance</string>
	<string name="expected_balance_label">Expected Balance</string>
	<string name="send_button_label">Send</string>
	<string name="market_cap_button_label">Market Cap</string>
	<string name="add_address_book_button_label">Add contact</string>
	<string name="check_utxo_button_label" translatable="false">Check utxo</string>
	<string name="extract_mnemonic_button_label" translatable="false">Extract mnemonic</string>
	<string name="hint_send_amount" translatable="false">0.0001</string>
	<string name="welcome_text">Welcome to Coin Wallet</string>
	<string name="channel_name" translatable="false">Notification channel</string>
	<string name="channel_description" translatable="false">Coin wallet notification channel</string>
	<string name="positive_dialog_button">Yes</string>
	<string name="negative_dialog_button">No</string>
	<string name="cancel_option">Cancel</string>
	<string name="mnemonic_preference_file" translatable="false">mnemonic_preference</string>
	<string name="restore_mnemonic_label">Mnemonic available to restore</string>
	<string name="language_english" translatable="false">English</string>
	<string name="language_vietnamese" translatable="false">Tiếng Việt</string>

	<string-array name="language_names">
		<item>@string/language_english</item>
		<item>@string/language_vietnamese</item>
	</string-array>
	<string name="language_english_code" translatable="false">en</string>

	<string name="language_vietnamese_code" translatable="false">vi</string>

	<string-array name="language_codes">
		<item>@string/language_english_code</item>
		<item>@string/language_vietnamese_code</item>
	</string-array>
	<string name="bottom_nav_label_home">Home</string>
	<string name="bottom_nav_label_history">History</string>
	<string name="bottom_nav_label_transfer_rate">Transfer</string>
	<string name="bottom_nav_label_setting">Settings</string>
	<string name="title_activity_qr_code_scanner" translatable="false">QrCodeScannerActivity</string>
	<string name="qr_code_scanner">Scan Qr</string>
	<string name="qr_code">Qr code</string>
	<string name="manage_wallet_label">Manage Wallet</string>
	<string name="last_transaction">Latest Transaction</string>
	<string name="success">Success</string>
	<string name="fail">Fail</string>
	<string name="pending">Pending</string>
	<string name="income">Income</string>
	<string name="outcome">Outcome</string>
	<string name="address">Address</string>
	<string name="amount">Amount</string>
	<string name="address_book">Address Book</string>
	<string name="change_password">Change Password</string>
	<string name="fingerprint">Fingerprint</string>
	<string name="language">Language</string>
	<string name="about">About</string>
	<string name="title_activity_language_option" translatable="false">LanguageOptionActivity</string>
	<string name="english" translatable="false">English</string>
	<string name="vietnam" translatable="false">Vietnamese</string>
	<string name="invisible_placeholder" translatable="false">**********</string>
	<string name="notification">Notification</string>
	<string name="profile">Person</string>
	<string name="save_contact">Save contact</string>
	<string name="contact">Contact</string>
	<string name="new_password">New Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="create_btn_label">Create</string>
	<string name="restore_btn_label">Restore</string>
	<string name="Amount">Balance</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="type_coin">Type coin</string>
	<string name="more_info">More Info</string>
	<string name="confirmation">Confirmation</string>
	<string name="fee">Fee</string>
	<string name="tx_update_time">Update time</string>
	<string name="receive">Receive</string>
	<string name="transaction_id">Transaction ID</string>
	<string name="generate_qr">Generate qr</string>
	<string name="request">Request</string>
	<string name="select_paired_device">Select a device</string>
	<string name="send_default">Default</string>
	<string name="send_offline">Send offline</string>
	<string name="send_bluetooth">Send bluetooth</string>
	<string name="send_method">Send method</string>
	<string name="select">Select</string>
	<string name="service_notification_title">Background activity</string>
	<string name="log_out">Log out</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="hour" translatable="false">1h</string>
	<string name="day" translatable="false">24h</string>
	<string name="week" translatable="false">7 days</string>
	<string name="month" translatable="false">30 days</string>
	<string name="year" translatable="false">a year</string>
	<string name="data_coin_market">Data about Coin Market</string>
	<string name="price">Price</string>
	<string name="market_capitalization">Market capitalization</string>
	<string name="market_cap_domination_index">Market cap domination index</string>
	<string name="volume_and_marketCap">Volume / Market cap</string>
	<string name="low_high_24h">Low for 24h / High for 24h</string>
	<string name="low_high_week">"Low / High for a week "</string>
	<string name="ranking">Ranking</string>
	<string name="name_coin_list">Name Coin List</string>
	<string name="exchange_rate_button_label">Exchange Rates</string>
	<string name="bitcoin" translatable="false">Bitcoin</string>
	<string name="all">All</string>
	<string name="amount_label">Input amount</string>
	<string name="save">Save</string>
	<string name="mnemonic">Mnemonic</string>
	<string name="wallet_label">Wallet Label</string>
	<string name="market_cap_trend">Market cap trend</string>
	<string name="exchange">Exchange</string>
	<string name="blockchain_network">Blockchain network</string>
	<string name="account_label">Account label</string>
	<string name="account">Account</string>
	<string name="latest_tx_placeholder">No transaction yet. Spend some.</string>
	<string name="account_path">Account Path</string>
	<string name="upgrade_to_p2sh">Upgrade to P2SH</string>
	<string name="mnemonic_note">Write down or save as you wish</string>
	<string name="restore_wallet_page_label">Restore wallet</string>
	<string name="scan_qr_page_label">Scan QR</string>
	<string name="payment_request_page_label">Payment request</string>
	<string name="market_cap_page_label">Market cap</string>
	<string name="manage_wallet_page_label">Manage wallet</string>
	<string name="change_password_page_label">Change password</string>
	<string name="change_language_page_label">Change language</string>
	<string name="transaction_detail_page_label">Transaction detail</string>
	<string name="exchange_rate_page_label">Exchange rate</string>
	<string name="create_account_page_label">Create account</string>
	<string name="bluetooth_remain_screen_note">Please stay on this screen until you received the payment</string>
	<string name="transfer_money_page_label">Transfer money</string>
	<string name="select_send_method_page_label">Select send method</string>
	<string name="market_cap_detail_page_label">Market cap detail of %1$s</string>
	<string name="theme">Theme</string>
	<string name="change_theme">Change theme</string>
	<string name="network_note">*testnet: network for testing, coin has no real value.\n*mainnet: real blockchain network, coin can be exchanged to fiat.</string>
	<string name="account_path_note">*this may help when you restore the wallet by mnemonic code.</string>
	<string name="account_index_note">*account is the third number in your key path ,starting from root (M), following BIP44 design.</string>
	<string name="send_batch"><u>Send batch?</u></string>
	<string name="multi_send">Multi Send</string>
	<plurals name="number_of_receiver">
		<item quantity="one"> + %d receiver</item>
		<item quantity="other"> + %d receivers</item>
	</plurals>
</resources>