<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
>
    <item
            android:id="@+id/page_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/bottom_nav_label_home"/>
    <item
            android:id="@+id/page_history"
            android:enabled="true"
            android:icon="@drawable/ic_history"
            android:title="@string/bottom_nav_label_history"/>
    <item
            android:id="@+id/page_transfer"
            android:enabled="true"
            android:icon="@drawable/ic_transfer_rate"
            android:title="@string/bottom_nav_label_transfer_rate"/>
    <item
            android:id="@+id/page_setting"
            android:enabled="true"
            android:icon="@drawable/ic_setting"
            android:title="@string/bottom_nav_label_setting"/>
</menu>