<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
			 tools:context=".ui.fragments.CreateWalletFragment"
>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical">
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/label_layout"
				android:layout_marginHorizontal="30dp"
				android:layout_marginVertical="15dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/wallet_label"
				style="@style/TextInputLayoutFilled"
				android:paddingVertical="5dp">
			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/label_text_field"
					style="@style/normal"

					android:inputType="text"/>
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
				android:layout_marginHorizontal="30dp"
				android:layout_marginVertical="15dp"
				android:id="@+id/menu_blockchain"
				style="@style/TextInputDropdown"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/blockchain_network">
			<AutoCompleteTextView
					android:id="@+id/select_option"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="none"
					style="@style/normal"
			/>
		</com.google.android.material.textfield.TextInputLayout>
		<Button
				android:layout_marginTop="15dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/create_wallet_btn"
				android:text="@string/create_btn_label"
				style="@style/ButtonStyle"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/normal"
				android:layout_margin="20dp"
				android:text="@string/network_note"/>
	</LinearLayout>

</FrameLayout>