<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.fragments.WalletManageFragment">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="10dp"
			android:orientation="vertical">
		<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/RoundedCard">
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_margin="15dp">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6"
						android:text="@string/account_path"/>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6"
						android:layout_marginTop="10dp"
						android:id="@+id/account_path"/>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						style="@style/normal"
						android:text="@string/account_path_note"
						/>
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>
		<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				style="@style/RoundedCard">
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_margin="15dp">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6"
						android:text="@string/address"/>
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6"
						android:layout_marginTop="10dp"
						android:id="@+id/address"/>
				<Button
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/upgrade_to_p2sh"
						android:layout_marginTop="15dp"
						style="@style/OutlinedButtonLabel"/>
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>
	</LinearLayout>

</FrameLayout>