<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragments.TransferFragment"
             xmlns:app="http://schemas.android.com/apk/res-auto">
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
			<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingHorizontal="20dp"
					android:paddingTop="10dp">
				<Button
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						android:minHeight="0dp"
						style="@style/TextButton.Light"
						android:id="@+id/send_batch_btn"
						android:textAllCaps="false"
						android:text="@string/send_batch"/>
				<com.google.android.material.textfield.TextInputLayout
						android:id="@+id/address_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@id/send_batch_btn"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintBottom_toTopOf="@id/amount_layout"
						android:hint="@string/address"
						style="@style/TextInputLayoutFilled"
						android:paddingVertical="5dp">
					<com.google.android.material.textfield.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/address_text_field"
							android:inputType="textMultiLine"
							style="@style/normal"/>
				</com.google.android.material.textfield.TextInputLayout>
				<com.google.android.material.textfield.TextInputLayout
						android:id="@+id/amount_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@id/address_layout"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintBottom_toTopOf="@id/send_button"
						android:hint="@string/amount"
						style="@style/TextInputLayoutFilled"
						android:paddingVertical="5dp">
					<com.google.android.material.textfield.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:id="@+id/amount_text_field"
							android:inputType="numberDecimal"
							style="@style/normal"/>
				</com.google.android.material.textfield.TextInputLayout>
				<Button
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@id/amount_layout"
						android:id="@+id/send_button"
						android:layout_marginTop="10dp"
						style="@style/ButtonStyle"
						android:text="@string/send_button_label"/>
			</androidx.constraintlayout.widget.ConstraintLayout>
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="20dp"
					android:id="@+id/send_method_view"
					android:orientation="horizontal">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6.reflect"
						android:text="@string/send_method"
						android:layout_alignParentStart="true"
						android:layout_toStartOf="@id/selected_method_hint"/>
				<TextView
						android:id="@+id/selected_method_hint"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6.reflect"
						android:layout_toStartOf="@id/select_send_method_expand"
						android:layout_centerInParent="true"
						/>
				<ImageButton
						android:id="@+id/select_send_method_expand"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/ic_navigate_next_white"
						android:layout_alignParentEnd="true"
						android:layout_centerVertical="true"/>
			</RelativeLayout>
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="20dp">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/save_contact"
						android:layout_alignParentStart="true"
						android:layout_toStartOf="@+id/save_contact_switch"
						android:layout_centerInParent="true"
						style="@style/h6.reflect"/>
				<com.google.android.material.switchmaterial.SwitchMaterial
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:id="@+id/save_contact_switch"/>
			</RelativeLayout>
			<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/save_contact_layout"
					android:paddingHorizontal="20dp"/>
			<include
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/address_book"
					layout="@layout/address_book"
					android:layout_marginBottom="45dp"/>
		</LinearLayout>
	</ScrollView>

</FrameLayout>