<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragments.PaymentRequestFragment"
             xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="20dp"
			android:paddingTop="20dp">
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/amount_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintBottom_toTopOf="@id/bluetooth_line"
				android:hint="@string/amount"
				style="@style/TextInputLayoutWhite"
				android:paddingVertical="5dp">
			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/amount_text_field"
					android:inputType="numberDecimal"
					style="@style/normal.black"/>
		</com.google.android.material.textfield.TextInputLayout>
		<RelativeLayout
				android:id="@+id/bluetooth_line"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/amount_layout">
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/bluetooth"
					android:layout_alignParentStart="true"
					android:layout_centerInParent="true"/>
			<com.google.android.material.switchmaterial.SwitchMaterial
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:id="@+id/bluetooth_switch"/>
		</RelativeLayout>

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/bluetooth_line"
				android:id="@+id/generate_qr_button"
				android:layout_marginTop="10dp"
				style="@style/ButtonStyle"
				android:text="@string/generate_qr"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>