<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragments.SelectSendMethodFragment">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/TransparentCardView"
				android:id="@+id/send_default_card">
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6.white"
						android:text="@string/send_default"
						android:padding="10dp"/>
				<ImageView
						android:id="@+id/default_selected_icon"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_done"
						android:visibility="gone"
						android:layout_alignParentEnd="true"
						android:layout_centerInParent="true"/>
			</RelativeLayout>

		</com.google.android.material.card.MaterialCardView>
		<View
				android:layout_marginHorizontal="5dp"
				android:layout_width="fill_parent"
				android:layout_height="1dp"
				android:background="@android:color/darker_gray" />
		<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/TransparentCardView"
				android:id="@+id/send_bluetooth_card">
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/h6.white"
						android:text="@string/send_bluetooth"
						android:padding="10dp"/>
				<ImageView
						android:id="@+id/bluetooth_selected_icon"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_done"
						android:layout_alignParentEnd="true"
						android:layout_centerInParent="true"
						android:visibility="gone"/>
			</RelativeLayout>
		</com.google.android.material.card.MaterialCardView>
		<Button
				android:id="@+id/select_confirm"
				android:layout_marginTop="20dp"
				android:layout_marginHorizontal="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/select"/>
	</LinearLayout>

</FrameLayout>