<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragments.ChangePasswordFragment"
             xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="20dp"
			android:layout_marginTop="64dp">
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/address_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintBottom_toTopOf="@id/amount_layout"
				android:hint="@string/new_password"
				style="@style/TextInputLayoutWhite"
				android:paddingVertical="5dp"
				app:endIconMode="password_toggle">
			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/new_password_text_field"
					style="@style/normal.black"
					android:inputType="textPassword"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/amount_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/address_layout"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintBottom_toTopOf="@id/change_password_button"
				android:hint="@string/confirm_password"
				style="@style/TextInputLayoutWhite"
				android:paddingVertical="5dp"
				app:endIconMode="password_toggle">
			<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/confirm_password_text_field"
					style="@style/normal.black"
					android:inputType="textPassword"/>
		</com.google.android.material.textfield.TextInputLayout>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
		        app:layout_constraintBottom_toBottomOf="parent"
		        app:layout_constraintLeft_toLeftOf="parent"
		        app:layout_constraintRight_toRightOf="parent"
		        app:layout_constraintTop_toBottomOf="@id/amount_layout"
		        android:id="@+id/change_password_button"
		        android:layout_marginTop="10dp"
		        style="@style/ButtonStyle"
		        android:text="@string/change_password"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>