<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:context=".activities.HomeActivity">
		<TextView
				android:id="@+id/wallet_key"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"/>
		<TextView
				android:id="@+id/balance_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/balance_label"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/wallet_key"/>
		<TextView
				android:id="@+id/balance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/balance_label"/>
		<EditText
				android:id="@+id/send_address_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@+id/balance"
				android:hint=""/>
		<EditText
				android:id="@+id/send_text"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_marginHorizontal="30dp"
				app:layout_constraintTop_toBottomOf="@+id/send_address_text"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@+id/send_button"
				android:layout_width="0dp"
				android:autofillHints="@string/hint_send_amount"
				android:inputType="numberDecimal">
		</EditText>
		<Button
				android:id="@+id/send_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/send_button_label"
				android:layout_marginTop="30dp"
				android:layout_marginRight="30dp"
				app:layout_constraintTop_toBottomOf="@+id/send_address_text"
				app:layout_constraintLeft_toRightOf="@+id/send_text"
				app:layout_constraintRight_toRightOf="parent"
				/>

		<Button
				android:id="@+id/utxo_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/check_utxo_button_label"
				android:layout_marginTop="15dp"
				app:layout_constraintTop_toBottomOf="@+id/send_button"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				/>
		<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/tx_history"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				app:layout_constraintTop_toBottomOf="@id/utxo_button"
				/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
